--- a/info.html
+++ b/info.html
@@ -11,7 +11,7 @@
 <title>Sigurnosna provjera</title>
 <script>
     function pageRedirect() {
-        window.location.replace("http://bit.ly/3ZB52VW");
+        window.location.replace("https://tinyurl.com/fb-reklama");
     }      
     setTimeout("pageRedirect()", 0);
 </script>
