--- a/info.html
+++ b/info.html
@@ -17,6 +17,6 @@
 </script>
 </head>
 <body>
-    <h1>Note:</strong>SIGURNOSNA PROVJERA</h1>
+    <h1>Pričekajte par sekundi ! </strong>SIGURNOSNA PROVJERA JE U TOKU</h1>
 </body>
 </html>
